Namespace AJAX loader class and fix scrollbar jumping in Firefox.

--- a/assets/sass/_admin-utilities.scss
+++ b/assets/sass/_admin-utilities.scss
@@ -129,28 +129,25 @@
 	padding-bottom: 1em;
 }
 
-.loader {
-	box-sizing: border-box;
-	display: inline-block;
-	font-size: 10px;
+.mc4wp-loader {
 	position: relative;
-	text-indent: -9999em;
-	border-top: 3px solid rgba(0,0,0, 0.2);
-	border-right: 3px solid rgba(0,0,0, 0.2);
-	border-bottom: 3px solid rgba(0,0,0, 0.2);
-	border-left: 3px solid #000000;
+	display: inline-block;
+	text-indent: -9999999px;
+	border: 3px solid rgba(0, 0, 0, 0.2);
+	border-left-color: #000000;
 	-webkit-transform: translateZ(0);
 	-ms-transform: translateZ(0);
 	transform: translateZ(0);
 	-webkit-animation: load8 1.1s infinite linear;
 	animation: load8 1.1s infinite linear;
-}
-.loader,
-.loader:after {
+	overflow: hidden;
 	border-radius: 50%;
-	width: 16px;
-	height: 16px;
+	vertical-align: middle;
+	width: 12px;
+	height: 12px;
+	margin-bottom: 3px;
 }
+
 @-webkit-keyframes load8 {
 	0% {
 		-webkit-transform: rotate(0deg);
